# result

./: .travis.yml  CMakeLists.txt  README.md  Result.hpp  test.cc
